# notebooklm_automation

./: .gitignore  Makefile  adspower_api_utils.py  constants.py  converter_md_pdf.py  database.py  download_playlist.sh  import_videos.py  main.py  main_adspower.py  main_v2.py  models.py  pyproject.toml  readme.md  send_summary_to_zotero.py
